--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "socket.io": "^4.5.0",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0",
-    "react-native-gesture-handler": "~2.2.1"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
